Big fixes and ports newsroom.

--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -1,4 +1,22 @@
-{% extends "base.html" %}
+{% extends "layout-side-nav.html" %}
+{% import "_section_newsroom.html" as section with context %}
+{% import "post-macros.html" as post_macros with context %}
+
+{# Variables #}
+
+{% set active_filters =
+   selected_filters_for_field('category') +
+   selected_filters_for_field('tags') +
+   selected_filters_for_field('author')
+%}
+{% set active_date_filters =
+   selected_filters_for_field('range_date_gte') + 
+   selected_filters_for_field('range_date_lte')
+%}
+{% set active_filters_total = active_filters|length + active_date_filters|length %}
+{% set view = get_document('views', 'newsroom') %}
+
+{# Block overrides #}
 
 {% block demo_title -%}
     Newsroom listing
@@ -12,93 +30,48 @@
     Press releases, speeches, op-eds, testimony, and blog posts produced by our Office of Communications
 {%- endblock %}
 
-{% block content %}
+{% block content_main %}
 
+    {% import "post-filters.html" as post_filters %}
+    {{ post_filters.render(section.newsrooms, active_filters, active_filters_total, active_date_filters, section.query, post_macros, selected_filters_for_field, current_date, section.path) }}
 
-    {# Variables #}
+    {% import "watchroom.html" as watchroom %}
+    {{ watchroom.render(queries.watchroom.search_with_url_arguments(size=1)) }}
 
-    {% set active_filters =
-       selected_filters_for_field('category') +
-       selected_filters_for_field('tags') +
-       selected_filters_for_field('author')
-    %}
+    {% import "posts-paginated.html" as posts_paginated %}
+    {{ posts_paginated.render(section.newsrooms, post_macros) }}
 
-    {% set active_date_filters =
-       selected_filters_for_field('range_date_gte') + 
-       selected_filters_for_field('range_date_lte')
-    %}
-
-    {% set active_filters_total = active_filters|length + active_date_filters|length %}
-
-    {# Set a few variables needed for sharing of includes between Blog and Newsroom #}
-    {% set query = queries.newsroom %}
-    {% set newsroom = query.search_with_url_arguments(size=10) %}
-    {% set view = get_document('views', 'newsroom') %}
-
-    {# Set 'posts' to the newsroom query to enable
-       some functions already developed for blog. #}
-    {% set posts = newsroom %}
-    {% set path = '/newsroom/' %}
-    {% set rss_path = '/feed/newsroom/' %}
-
-    {# Get the latest watchroom post. #}
-    {% set watchroom = queries.watchroom.search_with_url_arguments(size=1) %}
-
-    {# Macros #}
-
-    {% import "post-macros.html" as post_macros with context %}
-
-
-    <main class="content content__1-3" id="main" role="main">
-
-        <!-- .content_bar must come after .content_hero but before .content_wrapper -->
-        <div class="content_bar"></div>
-
-        <div class="wrapper content_wrapper">
-
-            <aside class="content_sidebar content__flush-all-on-small">
-                {% include "nav.html" %}
-            </aside>
-
-            <div class="content_main content__flush-bottom content__flush-top-on-small">
-                <section>
-                    {% include "post-filters.html" %}
-                    {% include "watchroom.html" %}
-                    {% include "posts-paginated.html" %}
+    <aside>
+        <section class="content_block">
+            <h1 class="header-slug">
+                <span class="header-slug_inner">
+                    Stay informed
+                </span>
+            </h1>
+            <div class="content-l">
+                <div class="content_block__sub content-l_col content-l_col-1-2">
+                    <p class="short-desc">
+                        Subscribe to our email newsletter. We will update you on new newsroom updates.
+                    </p>
+                    {% import "email-subscribe-form.html" as email_subscribe_form %}
+                    {{ email_subscribe_form.render(section.query) }}
+                </div>
+                <div class="content_block__sub content-l_col content-l_col-1-2">
+                    {% import "rss.html" as rss %}
+                    {{ rss.render(section.rss_path) }}
+                </div>
+            </div>
+        </section>
+        <div class="content_block content_block__flush-bottom content_block__flush-sides content_block__bg">
+            <div class="content-l">
+                <section class="content_block content_block__flush-top content-l_col content-l_col-1-2">
+                    {% import "related-links.html" as related_links %}
+                    {{ related_links.render(view.related_links) }}
                 </section>
-                <aside>
-                    <section class="content_block">
-                        <h1 class="header-slug">
-                            <span class="header-slug_inner">
-                                Stay informed
-                            </span>
-                        </h1>
-                        <div class="content-l">
-                            <div class="content_block__sub content-l_col content-l_col-1-2">
-                                <p class="short-desc">
-                                    Subscribe to our email newsletter. We will update you on new newsroom updates.
-                                </p>
-                                {% include "email-subscribe-form.html" %}
-                            </div>
-                            <div class="content_block__sub content-l_col content-l_col-1-2">
-                                {% include "rss.html" %}
-                            </div>
-                        </div>
-                    </section>
-                    <div class="content_block content_block__flush-bottom content_block__flush-sides content_block__bg">
-                        <div class="content-l">
-                            <section class="content_block content_block__flush-top content-l_col content-l_col-1-2">
-                                {% include "related-links.html" %}
-                            </section>
-                            <section class="content_block content-l_col content-l_col-1-2">
-                                {% include "upcoming-events.html" %}
-                            </section>
-                        </div>
-                    </div>
-                </aside>
-            </div><!-- END .content_main -->
-
-        </div><!-- END .content_wrapper -->
-    </main><!-- END .content -->
-
-{% endblock content %}
+                <section class="content_block content-l_col content-l_col-1-2">
+                    {% include "upcoming-events.html" %}
+                </section>
+            </div>
+        </div>
+    </aside>
+{% endblock %}
