Converts contact section.

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -1,4 +1,11 @@
-{% extends "base.html" %}
+{% extends "layout-2-1-bleedbar.html" %}
+{% import "_section_contact-us.html" as section with context %}
+{% import "_layout-top-contact.html" as _layout_top_contact %}
+{% import "_layout-mailing-addresses.html" as _layout_mailing_addresses %}
+{% import "_layout-contact-list.html" as _layout_contact_list %}
+{% import "_layout-sidebar-contacts.html" as _layout_sidebar_contacts %}
+
+{# Block overrides #}
 
 {% block demo_title -%}
     Contact us
@@ -7,52 +14,45 @@
 {% block title -%}
     Contact us
 {%- endblock %}
+
 {% block desc -%}
     Contact information for the Consumer Financial Protection Bureau
 {%- endblock %}
 
-{% block content %}
-
-    {# Variables #}
-    {% set query = queries.contact %}
-    {% set contacts = query.search_with_url_arguments(size=10) %}
-
-    {# Macros #}
-    {% import "macros.html" as macros with context %}
-
-    <main class="content content__2-1 content__bleedbar" id="main" role="main">
-
-        <!-- .content_bar must come after .content_hero but before .content_wrapper -->
-        <div class="content_bar"></div>
-
-        <div class="wrapper">
-            <section class="content_intro">
-                <h1>Contact us</h1>
-                <div class="content-l">
-                    <section class="content-l_col content-l_col-1-2">
-                        {% include "general-inqueries.html" %}
-                    </section>
-                    <section class="content-l_col content-l_col-1-2 content-l_col__before-divider">
-                        {% include "submit-a-complaint.html" %}
-                    </section>
-                </div>
-            </section>
-        </div>
-
-        <div class="content_line"></div>
-
-        <div class="wrapper content_wrapper">
-            <div class="content_main">
-                <section>
-                    {%- include "contact-list.html" %}
+{% block pre_content %}
+    <div class="wrapper">
+        <section class="content_intro">
+            <h1>Contact us</h1>
+            <div class="content-l">
+                <section class="content-l_col content-l_col-1-2">
+                    {{ _layout_top_contact.render(
+                           get_document('contact', 'general-inqueries'),
+                           macros) }}
+                </section>
+                <section class="content-l_col content-l_col-1-2 content-l_col__before-divider">
+                    {{ _layout_top_contact.render(
+                           get_document('contact', 'submit-a-complaint'),
+                           macros) }}
                 </section>
             </div>
-            <aside class="content_sidebar">
-                {%- include "mailing-addresses.html" %}
-                <div class="content_line"></div>
-                {%- include "promoted-contacts.html" %}
-            </aside>
-        </div>
-    </main>
+        </section>
+    </div>
+    <div class="content_line"></div>
+{% endblock %}
 
-{% endblock content %}
+{% block content_main %}
+    {{ _layout_contact_list.render(section.contacts, macros) }}
+{% endblock %}
+
+{% block content_sidebar %}
+    {{ _layout_mailing_addresses.render(
+           get_document('contact', 'administrative-offices'),
+           get_document('contact', 'consumer-contact-center'),
+           macros) }}
+    <div class="content_line"></div>
+    {{ _layout_sidebar_contacts.render(
+           get_document('contact', 'accessibility-feedback'), 
+           get_document('contact', 'whistleblowers'), 
+           get_document('contact', 'tribal-consultation'),
+           macros) }}
+{% endblock %}
