Some refactoring and other mogrations.

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -1,9 +1,9 @@
 {% extends "layout-2-1-bleedbar.html" %}
-{% import "_section_contact-us.html" as section with context %}
-{% import "_layout-top-contact.html" as _layout_top_contact %}
-{% import "_layout-mailing-addresses.html" as _layout_mailing_addresses %}
+{% import "_section-contact-us.html" as section with context %}
 {% import "_layout-contact-list.html" as _layout_contact_list %}
+{% import "_layout-mailing-addresses.html" as _layout_mailing_addresses %}
 {% import "_layout-sidebar-contacts.html" as _layout_sidebar_contacts %}
+{% import "_layout-top-contact.html" as _layout_top_contact %}
 
 {# Block overrides #}
 
