--- a/newsroom/_press-information.html
+++ b/newsroom/_press-information.html
@@ -1,4 +1,6 @@
 
+{% macro render() %}
+
 <aside class="press-information">
     <h1 class="header-slug">
         <span class="header-slug_inner">
@@ -14,3 +16,5 @@
            href="/newsroom/press-resources/">Go to press resources page</a>
     </p>
 </aside>
+
+{% endmacro %}
