Adds cordray bio content.

--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -50,11 +50,129 @@
                         <div class="demo-placeholder">Share</div>
                     </section>
                     
-                    <div class="content_line"></div>
+                    <section class="content_block">
+                        <div class="content-l">
+                            <div class="content-l_col content-l_col-1-2">
+                                <span class="demo-placeholder">IMG</span>
+                                <h1 class="h4">Downloads</h1>
+                                <a href="#" class="jump-link jump-link__download">High-res photo</a>
+                                <a href="#" class="jump-link jump-link__download">Biography</a>
+                            </div>
+                            <div class="content-l_col content-l_col-1-2 content-l_col__before-divider">
+                                <h1 class="h4">Request speaking info</h1>
+                                <span class="cf-icon cf-icon-email"></span>
+                                <a href="mailto:externalaffairs@cfpb.gov">
+                                    externalaffairs@cfpb.gov
+                                </a>
+                            </div>
+                        </div>
+                    </section>
                     
-                    <aside class="content_block">
-                        <h1 class="h2">More information about Richard Cordray</h1>
-                    </asied>
+                    <aside>
+
+                        <section class="content_block">
+                            <h1 class="h2">More information about Richard Cordray</h1>
+                            <div class="content-l">
+                                <div class="content-l_col content-l_col-1-3">
+                                    <h2 class="h5">
+                                        <span class="cf-icon cf-icon-newspaper"></span>
+                                        Newsroom
+                                    </h2>
+                                    <p class="short-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.</p>
+                                    <a href="#" class="jump-link">
+                                        Read news about the director
+                                    </a>
+                                </div>
+                                <div class="content-l_col content-l_col-1-3">
+                                    <h2 class="h5">
+                                        <span class="cf-icon cf-icon-newspaper"></span>
+                                        Blogs
+                                    </h2>
+                                    <p class="short-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.</p>
+                                    <a href="#" class="jump-link">
+                                        Blogs with the director
+                                    </a>
+                                </div>
+                                <div class="content-l_col content-l_col-1-3">
+                                    <h2 class="h5">
+                                        <span class="cf-icon cf-icon-newspaper"></span>
+                                        Calendar
+                                    </h2>
+                                    <p class="short-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita id minima ut nulla.</p>
+                                    <a href="#" class="jump-link">
+                                        View Director Cordray's calendar
+                                    </a>
+                                </div>
+                            </div>
+                        </section>
+
+                        <div class="content_block">
+                            <div class="content-l">
+                                <section class="content-l_col content-l_col-1-2">
+                                    <h1 class="h2">
+                                        Cordray’s Corner
+                                    </h1>
+                                    <div class="demo-placeholder">
+                                        Video poster
+                                    </div>
+                                    <p class="short-desc short-desc__large">
+                                        View videos on Director Richard Cordray discussing various relevant fiancial topics and how the bureau is involved.
+                                    </p>
+                                    <a href="#" class="jump-link jump-link__external-link">
+                                        View Cordray’s Corner videos on YouTube
+                                    </a>
+                                </section>
+                                <section class="content-l_col content-l_col-1-2 content-l_col__before-divider">
+                                    <h1 class="h2">
+                                        CFPB history
+                                    </h1>
+                                    <div class="demo-placeholder">
+                                        IMG
+                                    </div>
+                                    <p class="short-desc short-desc__large">
+                                        In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director of the CFPB.
+                                    </p>
+                                    <a href="#" class="jump-link jump-link__external-link">
+                                        Learn more about our history
+                                    </a>
+                                </section>
+                            </div>
+                        </div>
+
+                        <section class="content_block">
+                            <h1 class="h2">
+                                CFPB leadership
+                            </h1>
+                            <div class="content-l">
+                                <div class="content-l_col content-l_col-1-2">
+                                    <p class="short-desc">
+                                        In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director  of the CFPB. In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director  of the CFPB.
+                                    </p>
+                                </div>
+                                <div class="content-l_col content-l_col-1-2 content-l_col__before-divider">
+                                    <ul class="list list__unstyled list__spaced">
+                                        <li class="list_item">
+                                            <a href="#" class="list_link jump-link">
+                                                Learn more about deputy director Steven Antonkes
+                                            </a>
+                                        </li>
+                                        <li class="list_item">
+                                            <a href="#" class="list_link jump-link">
+                                                Learn more about deputy director Steven Antonkes
+                                            </a>
+                                        </li>
+                                        <li class="list_item">
+                                            <a href="#" class="list_link jump-link">
+                                                Learn more about deputy director Steven Antonkes
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </section>
+
+                    </aside>
+
                 </section>
             </div><!-- END .content_main -->
 
