Update link list in bio.

--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -150,7 +150,7 @@
                                     </p>
                                 </div>
                                 <div class="content-l_col content-l_col-1-2 content-l_col__before-divider">
-                                    <ul class="list list__unstyled list__spaced">
+                                    <ul class="list list__unstyled list__links">
                                         <li class="list_item">
                                             <a href="#" class="list_link jump-link">
                                                 Learn more about deputy director Steven Antonkes
