Make downloads links a link list.

--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -55,8 +55,14 @@
                             <div class="content-l_col content-l_col-1-2">
                                 <span class="demo-placeholder">IMG</span>
                                 <h1 class="h4">Downloads</h1>
-                                <a href="#" class="jump-link jump-link__download">High-res photo</a>
-                                <a href="#" class="jump-link jump-link__download">Biography</a>
+                                <ul class="list  list__links">
+                                    <li class="li list_item">
+                                        <a href="#" class="list_link jump-link jump-link__download">High-res photo</a>
+                                    </li>
+                                    <li class="list_item">
+                                        <a href="#" class="list_link jump-link jump-link__download">Biography</a>
+                                    </li>
+                                </ul>
                             </div>
                             <div class="content-l_col content-l_col-1-2 content-l_col__before-divider">
                                 <h1 class="h4">Request speaking info</h1>
