--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -118,9 +118,9 @@
                                     <h1 class="h2">
                                         Cordray’s Corner
                                     </h1>
-                                    <div class="demo-placeholder">
-                                        Video poster
-                                    </div>
+                                    <figure class="figure__bordered">
+                                        <img src="http://placekitten.com/380/214" alt="">
+                                    </figure>
                                     <p class="short-desc short-desc__large">
                                         View videos on Director Richard Cordray discussing various relevant fiancial topics and how the bureau is involved.
                                     </p>
@@ -132,9 +132,9 @@
                                     <h1 class="h2">
                                         CFPB history
                                     </h1>
-                                    <div class="demo-placeholder">
-                                        IMG
-                                    </div>
+                                    <figure class="figure__bordered">
+                                        <img src="http://placekitten.com/380/214" alt="">
+                                    </figure>
                                     <p class="short-desc short-desc__large">
                                         In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director of the CFPB.
                                     </p>
