Updates list in bio page.

--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -55,7 +55,7 @@
                             <div class="content-l_col content-l_col-1-2">
                                 <span class="demo-placeholder">IMG</span>
                                 <h1 class="h4">Downloads</h1>
-                                <ul class="list  list__links">
+                                <ul class="list list__horizontal list__links">
                                     <li class="li list_item">
                                         <a href="#" class="list_link jump-link jump-link__download">High-res photo</a>
                                     </li>
