Removes duplicate pattern link__block-on-small in favor of jump-link.

--- a/newsroom/press-information.html
+++ b/newsroom/press-information.html
@@ -9,8 +9,6 @@
         If you want to republish the article or have questions about the content,
         please contact the press office.
     </p>
-    <p>
-        <a class="link__block-on-small"
-           href="/newsroom/press-resources/">Go to press resources page</a>
-    </p>
+    <a class="jump-link"
+       href="{{ path }}press-resources/">Go to press resources page</a>
 </aside>
