Add Object-Oriented CSS-based media object.

--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
                                         <a class="list_link" href="docs/media-object/">Media object</a>
                                     </li>
                                     <li>
+                                        <a class="list_link" href="docs/media/">Media</a>
+                                    </li>
+                                    <li>
                                         <a class="list_link" href="docs/meta/">Meta</a>
                                     </li>
                                     <li>
