Add content title & desc and hide/show for mobile classes

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                             <ul class="list list__unstyled">
                                 <li>
                                     <span class="demo-file-name">
-                                        <b>cthe-bureau/</b>index.html
+                                        <b>the-bureau/</b>index.html
                                     </span>
                                     <a class="demo-sheer-link"
                                        href="the-bureau/">
