Hide section on mobile.

--- a/the-bureau/about-rich-cordray/index.html
+++ b/the-bureau/about-rich-cordray/index.html
@@ -48,7 +48,7 @@
                         <div class="demo-placeholder">Share</div>
                     </div>
                     
-                    <section class="content_block">
+                    <section class="content_block u-hide-on-mobile">
                         <div class="content-l">
                             <div class="content-l_col content-l_col-1-2">
                                 <span class="demo-placeholder">IMG</span>
