--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
                     <div class="demo-spaced">
                         <h1 class="h2">
-                            Templates
+                            Sections
                         </h1>
                     </div>
 
@@ -259,7 +259,23 @@
                                     </a>
                                 </li>
                             </ul>
+                        </div>
+                    </div><!-- END .padded-container -->
 
+                    <div class="padded-container">
+                        <div class="padded-container_body">
+                            <ul class="list list__unstyled">
+                                <li>
+                                    <span class="demo-file-name">
+                                        <b>the-bureau/</b>index.html
+                                    </span>
+                                    <a class="demo-sheer-link"
+                                       href="the-bureau/">
+                                        view in Sheer
+                                        <span class="cf-icon cf-icon-external-link"></span>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </div><!-- END .padded-container -->
 
