Adds the bureau section to the landing page.

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
                     <div class="demo-spaced">
                         <h1 class="h2">
-                            Sections
+                            Section templates
                         </h1>
                     </div>
 
@@ -271,6 +271,26 @@
                                     </span>
                                     <a class="demo-sheer-link"
                                        href="the-bureau/">
+                                        view in Sheer
+                                        <span class="cf-icon cf-icon-external-link"></span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <span class="demo-file-name">
+                                        <b>the-bureau/</b>about-rich-cordray/
+                                    </span>
+                                    <a class="demo-sheer-link"
+                                       href="the-bureau/about-rich-cordray/">
+                                        view in Sheer
+                                        <span class="cf-icon cf-icon-external-link"></span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <span class="demo-file-name">
+                                        <b>the-bureau/</b>about-steve-antonakes/
+                                    </span>
+                                    <a class="demo-sheer-link"
+                                       href="the-bureau/about-steve-antonakes/">
                                         view in Sheer
                                         <span class="cf-icon cf-icon-external-link"></span>
                                     </a>
