--- a/the-bureau/nav.html
+++ b/the-bureau/nav.html
@@ -3,7 +3,7 @@
 {% set navigation_bar = [
     (path, 'index', 'The Bureau'),
     (path + 'about-rich-cordray/', 'about-rich-cordray', 'Director Cordray'),
-    (path + 'deputy-director-antonakes/', 'deputy-director-antonakes', 'Deputy Director Antonakes'),
+    (path + 'about-steve-antonakes/', 'about-steve-antonakes', 'Deputy Director Antonakes'),
     (path + 'bureau-structure/', 'bureau-structure', 'Bureau Structure'),
     (path + 'leadership-calendar/', 'leadership-calendar', 'Leadership calendar'),
     (path + 'history/', 'history', 'History'),
