--- a/the-bureau/index.html
+++ b/the-bureau/index.html
@@ -92,17 +92,17 @@
                         <div class="content-l">
                             <section class="content-l_col-1-2">
                                 <ul class="list list__branded u-mb0">
-                                    <li class="list_item"><span class="list_span">Write rules, supervise companies, and enforce federal consumer financial protection laws.</span></li>
-                                    <li class="list_item"><span class="list_span">Restrict unfair, deceptive, or abusive acts or practices.</span></li>
-                                    <li class="list_item"><span class="list_span">Take consumer complaints</span></li>
-                                    <li class="list_item"><span class="list_span">Promote financial education</span></li>
+                                    <li>Write rules, supervise companies, and enforce federal consumer financial protection laws.</li>
+                                    <li>Restrict unfair, deceptive, or abusive acts or practices.</li>
+                                    <li>Take consumer complaints</li>
+                                    <li>Promote financial education</li>
                                 </ul>
                             </section>
                             <section class="content-l_col-1-2">
                                 <ul class="list list__branded">
-                                    <li class="list_item"><span class="list_span">Research consumer behavior</span></li>
-                                    <li class="list_item"><span class="list_span">Monitor financial markets for new risks to consumers</span></li>
-                                    <li class="list_item"><span class="list_span">Enforce laws that outlaw discrimination and other unfair treatment in consumer finance</span></li>
+                                    <li>Research consumer behavior</li>
+                                    <li>Monitor financial markets for new risks to consumers</li>
+                                    <li>Enforce laws that outlaw discrimination and other unfair treatment in consumer finance</li>
                                 </ul>
                             </section>
                         </div>
